--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <title>Document</title>
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/8f5614952c.js" crossorigin="anonymous"></script>
+        <script>(function(){var pp=document.createElement('script'), ppr=document.getElementsByTagName('script')[0]; stid='TzBwejRZbUhtdnE3WHltcnVhdVpOdz09';pp.type='text/javascript'; pp.async=true; pp.src=('https:' == document.location.protocol ? 'https://' : 'http://') + 's01.live2support.com/dashboardv2/chatwindow/'; ppr.parentNode.insertBefore(pp, ppr);})();</script>
     </head>
+
 <body>
 <div id="header">
 
@@ -41,10 +43,14 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About us</h1>
-                <P>I'm highly dedicated and hardworking.
-                    I work extremely well in a team, as well as being able to work confidently on my own.
-                    I possess excellent communication and listening skills.
-                    I am working as an Full Stack Web Devloper</p>
+                <P>we are team hexagon . we are machine learning professionals and have about two years experience.
+                  we have develovped multiple machine learning models for different domains including education ,medecine,aggriculture and many more.
+                  our main aim is to make a future with artifecial intelligence on every domain possible to create a better future .
+                  we are a team of four members were two are really skilled in fullstack develovpment and the other two are a prodigy in machine learning.
+                  we beleive that our AI has the potential to create a better future ....
+
+
+                </p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -53,24 +59,24 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>UI?UX</span><br>Designing Web/App interfaces</li>
+                            <li><span>Machine learning</span><br>Deep learning(nerual networks)</li>
                             <li><span>Web Development</span><br>Web app Development</li>
-                            <li><span>App Development</span><br>Building Android/iOS apps</li>
+                            <li><span>Back end-development</span><br>firebase and flask</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2021 - Current</span><br>UI/UX Design Training at ET Insitute</li>
-                            <li><span>2019 - 2021</span><br>Town lead at StarApp LLC.</li>
-                            <li><span>2017 - 2019</span><br>UI/UX Design Executive at Coin Digital Ltd.</li>
-                            <li><span>2016-2017</span><br>Intership at ekart eCommerce.</li>
+                            <li><span>2021 - Current</span><br>Machine learning - Udemy</li>
+                            <li><span>2021 - Current</span><br>full stack develoment - Udemy</li>
+                            <li><span>2021 - Current</span><br>firebase</li>
+
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2016</span><br>UI/UX Design Training at ET Institute</li>
-                            <li><span>2016</span><br>MBA from MIT Bangalore</li>
-                            <li><span>2014</span><br>BBA from ISM Bangalore</li>
+                            <li><span>2016</span><br>PSNACET</li>
+                            <li><span>2016</span><br>PSNACET</li>
+                            <li><span>2014</span><br>PSNACET</li>
                         </ul>
                     </div>
                 </P>
@@ -81,27 +87,24 @@
 
 <div id="services">
 <div class="container">
-    <h1 class="sub-title">My Services</h1>
+    <h1 class="sub-title">OUR FEATURES</h1>
     <div class="services-list">
         <div>
             <i class="fa-solid fa-code"></i>
-            <h2>Web Design</h2>
-            <p>Web design identifies the goals of a website or webpage and promotes accessibility for all potential users.
-                This process involves organizing content and images across a series of pages and integrating applications and other interactive elements.</p>
+            <h2>STUDENT ANALYSIS</h2>
+            <p>Dive deep into the world of statistics .</p>
             <a href="#">Learn more</a>
         </div>
         <div>
             <i class="fa-solid fa-crop"></i>
-            <h2>UI/UX Design</h2>
-            <p>Web design identifies the goals of a website or webpage and promotes accessibility for all potential users.
-                This process involves organizing content and images across a series of pages and integrating applications and other interactive elements.</p>
+            <h2>AUTOMATED GRADING </h2>
+            <p>AI powered evaluation where Percision meets effeciency</p>
             <a href="#">Learn more</a>
         </div>
         <div>
             <i class="fa-brands fa-app-store-ios"></i>
-            <h2>App Design</h2>
-            <p>Web design identifies the goals of a website or webpage and promotes accessibility for all potential users.
-                This process involves organizing content and images across a series of pages and integrating applications and other interactive elements.</p>
+            <h2>UNIVERSAL ACCESS</h2>
+            <p>Every book is a key to another world and a library is a gateway to countless relams waiting to be explored</p>
             <a href="#">Learn more</a>
         </div>
     </div>
@@ -110,32 +113,29 @@
 
 <div id="portfolio">
     <div class="container">
-    <h1 class="sub-ttle">My Work</h1>
+    <h1 class="sub-ttle"></h1>
     <div class="work-list">
         <div class="work">
             <img src="images/work-1.png">
             <div class="layer">
-                <h3>Social Media App</h3>
-                <p>The app connects you to the talented people around the world.
-                    Download it from play store</p>
+                <h3>CAREER GUIDANCE</h3>
+                <p>choose a path that sets uour soul on fire , and you will find the journey will carry you to places beyond your wildest dreams</p>
                     <a href="#"><i class="fa-sharp fa-solid fa-link"></i></a>
             </div>
         </div>
         <div class="work">
             <img src="images/work-2.png">
             <div class="layer">
-                <h3>Agro App For decease prediction</h3>
-                <p>The app connects you to the talented people around the world.
-                    Download it from play store</p>
+                <h3>EARLY WARNINGS</h3>
+                <p>listen to the whispers of the wind ,they carry secrets of what is to come</p>
                     <a href="#"><i class="fa-sharp fa-solid fa-link"></i></a>
             </div>
         </div>
         <div class="work">
             <img src="images/work-3.png">
             <div class="layer">
-                <h3>Sports Management App</h3>
-                <p>The app connects you to the talented people around the world.
-                    Download it from play store</p>
+                <h3>TEACHER PRO</h3>
+                <p>A true leader is one who harness the strengths of their team and inspires their sprits towards a shared vision</p>
                     <a href="#"><i class="fa-sharp fa-solid fa-link"></i></a>
             </div>
         </div>
